# nand2tetris

./: .gitignore  README.md
.github/workflows/: ci.yml
projects/01/: DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Or8Way.hdl  Xor.hdl
projects/02/: ALU.hdl  ALU.tst  Add16.hdl  Add16.tst  FullAdder.cmp  FullAdder.hdl  FullAdder.tst  HalfAdder.cmp  HalfAdder.hdl  HalfAdder.tst  Inc16.hdl  Inc16.tst
projects/03/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl
projects/04/Fill/: Fill.asm
projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
projects/08/vm-translator/: Cargo.toml  Containerfile  README.md  VMTranslator.py  vm-translate.sh
projects/08/vm-translator/src/: bootstrap.rs  codegen.rs  error.rs  lib.rs  main.rs  memory.rs  parser.rs
projects/08/vm-translator/tests/: fuzz_test.rs  integration_test.rs
projects/10/: JackAnalyzer.py
projects/10/jack-analyzer/: Cargo.toml  Containerfile  README.md
projects/10/jack-analyzer/src/: ast.rs  error.rs  lib.rs  main.rs  parser.rs  token.rs  tokenizer.rs  xml.rs
projects/10/jack-analyzer/tests/: fuzz_test.proptest-regressions  fuzz_test.rs
projects/11/: JackCompiler.py
projects/11/jack-compiler/: Cargo.toml  Containerfile  README.md
projects/11/jack-compiler/src/: codegen.rs  error.rs  lib.rs  main.rs  optimizer.rs  symbol_table.rs  vm_writer.rs
projects/11/jack-compiler/tests/: fuzz_test.proptest-regressions  fuzz_test.rs  integration_test.rs  optimizer_test.rs
projects/12/: Array.jack  Keyboard.jack  LICENSE  Math.jack  Memory.jack  Output.jack  README.md  Screen.jack  String.jack  Sys.jack  compare_vm.py
projects/13/: more fun to go.txt
(+97 files in other folders)
