[package]
name = "vm-translator"
version = "2.0.2"
edition = "2024"
authors = ["nand2tetris"]
description = "Full VM-to-Hack translator with branching and function calls (Project 08)"
license = "MIT"
rust-version = "1.92"

[dependencies]
thiserror = "2.0"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "vm-translator"
path = "src/main.rs"

[lib]
name = "vm_translator"
path = "src/lib.rs"
