[package]
name = "jack-compiler"
version = "1.3.0"
edition = "2024"
rust-version = "1.92"
authors = ["nand2tetris"]
description = "Full Jack to VM compiler with optimizations"
license = "MIT"

[dependencies]
jack-analyzer = { path = "../../10/jack-analyzer" }
thiserror = "2.0"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.14"
proptest = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "JackCompiler"
path = "src/main.rs"
